--- a/requirements.txt
+++ b/requirements.txt
@@ -5,10 +5,11 @@ chardet==3.0.4
 defusedxml==0.6.0
 Django==3.0.8
 django-allauth==0.42.0
+django-environ==0.4.5
 idna==2.10
 oauthlib==3.1.0
+psycopg2-binary==2.8.5
 pycodestyle==2.6.0
-python-decouple==3.3
 python3-openid==3.2.0
 pytz==2020.1
 requests==2.24.0
