--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ django-crispy-forms==1.9.1
 django-environ==0.4.5
 idna==2.10
 oauthlib==3.1.0
+Pillow==7.2.0
 psycopg2-binary==2.8.5
 pycodestyle==2.6.0
 python3-openid==3.2.0
