--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ django-js-asset==1.2.2
 idna==2.10
 oauthlib==3.1.0
 Pillow==7.2.0
+psycopg2==2.8.5
 psycopg2-binary==2.8.5
 pycodestyle==2.6.0
 python3-openid==3.2.0
