started marketing app migrated/setting/views

--- a/focus/.template.env
+++ b/focus/.template.env
@@ -1,2 +1,13 @@
 DEBUG=
 SECRET_KEY=
+
+MAILCHIMP_API_KEY= 
+MAILCHIMP_DATA_CENTER= 
+MAILCHIMP_EMAIL_LIST_ID=
+
+DEFAULT_FROM_EMAIL=
+NOTIFY_EMAIL=
+
+STRIPE_PUBLIC_KEY=
+STRIPE_SECRET_KEY=
+STRIPE_WH_SECRET=
