--- a/requirements.txt
+++ b/requirements.txt
@@ -17,10 +17,12 @@ Pillow==7.2.0
 psycopg2==2.8.5
 psycopg2-binary==2.8.5
 pycodestyle==2.6.0
+python-dateutil==2.8.1
 python3-openid==3.2.0
 pytz==2020.1
 requests==2.24.0
 requests-oauthlib==1.3.0
+six==1.15.0
 sqlparse==0.3.1
 stripe==2.48.0
 toml==0.10.1
