--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ django-countries==6.1.2
 django-crispy-forms==1.9.1
 django-environ==0.4.5
 django-js-asset==1.2.2
+gunicorn==20.0.4
 idna==2.10
 oauthlib==3.1.0
 Pillow==7.2.0
