--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ django-crispy-forms==1.9.1
 django-environ==0.4.5
 django-js-asset==1.2.2
 django-storages==1.9.1
+django-user-agents==0.4.0
 docutils==0.15.2
 gunicorn==20.0.4
 idna==2.10
@@ -34,4 +35,6 @@ six==1.15.0
 sqlparse==0.3.1
 stripe==2.48.0
 toml==0.10.1
+ua-parser==0.10.0
 urllib3==1.25.9
+user-agents==2.2.0
