added new test to marketing app

--- a/focus/.template.env
+++ b/focus/.template.env
@@ -1,13 +1,14 @@
-DEBUG=
+
+
+DEBUG=True
 SECRET_KEY=
 
-MAILCHIMP_API_KEY= 
-MAILCHIMP_DATA_CENTER= 
-MAILCHIMP_EMAIL_LIST_ID=
-
-DEFAULT_FROM_EMAIL=
-NOTIFY_EMAIL=
+EMAIL_HOST_PASS=
+EMAIL_HOST_USER=
 
 STRIPE_PUBLIC_KEY=
 STRIPE_SECRET_KEY=
 STRIPE_WH_SECRET=
+
+For Testing
+NRGOK_STRIPE_WH_SECRET=
