--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ boto3==1.14.38
 botocore==1.17.38
 certifi==2020.6.20
 chardet==3.0.4
+coverage==5.2.1
 defusedxml==0.6.0
 dj-database-url==0.5.0
 Django==3.0.8
