added new data to temple.env and rearanged setting

--- a/focus/.template.env
+++ b/focus/.template.env
@@ -6,6 +6,9 @@ SECRET_KEY=
 EMAIL_HOST_PASS=
 EMAIL_HOST_USER=
 
+SOCIAL_AUTH_FACEBOOK_KEY=
+SOCIAL_AUTH_FACEBOOK_SECRET=
+
 STRIPE_PUBLIC_KEY=
 STRIPE_SECRET_KEY=
 STRIPE_WH_SECRET=
