--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,4 @@ install:
     - pip install -r requirements.txt
 
 scripts:
-    - SECRET_KEY="itsasecret" python manage.py test
+    -  python manage.py test
