--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: python
 python:
     - "3.8"
 env:
-    - SECRET_KEY="Travis"
+    - SECRET_KEY=env('SECRET_KEY')
 install:
     - pip install -r requirements.txt
 
