--- a/.travis.yml
+++ b/.travis.yml
@@ -7,4 +7,4 @@ install:
     - pip install -r requirements.txt
 
 scripts:
-    -  python manage.py test
+    -  SECRET_KEY=env('SECRET_KEY') python manage.py test
