--- a/.travis.yml
+++ b/.travis.yml
@@ -5,4 +5,4 @@ install:
     - pip install -r requirements.txt
 
 scripts:
-    -  SECRET_KEY=env('SECRET_KEY') python manage.py test
+    -  SECRET_KEY="SECRET_KEY" python manage.py test
