--- a/focus/.template.env
+++ b/focus/.template.env
@@ -5,9 +5,11 @@ SECRET_KEY=
 
 EMAIL_HOST_PASS=
 EMAIL_HOST_USER=
+NOTIFY_EMAIL=
+DEFAULT_FROM_EMAIL=
 
-SOCIAL_AUTH_FACEBOOK_KEY=
-SOCIAL_AUTH_FACEBOOK_SECRET=
+SOCIAL_AUTH_FACEBOOK_KEY=(when_needed)
+SOCIAL_AUTH_FACEBOOK_SECRET=(when_needed)
 
 STRIPE_PUBLIC_KEY=
 STRIPE_SECRET_KEY=
