--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,18 @@
-asgiref==3.2.10
+asgiref==3.5.0
 autopep8==1.5.3
 boto3==1.14.38
 botocore==1.17.38
 certifi==2020.6.20
+cffi==1.15.0
 chardet==3.0.4
 coverage==5.2.1
+cryptography==36.0.2
 defusedxml==0.6.0
 dj-database-url==0.5.0
-Django==3.0.8
-django-allauth==0.42.0
+Django==4.0.3
+django-allauth==0.49.0
 django-autoslug==1.9.8
-django-ckeditor==5.9.0
+django-ckeditor==6.2.0
 django-countries==6.1.2
 django-crispy-forms==1.9.1
 django-environ==0.4.5
@@ -23,10 +25,12 @@ gunicorn==20.0.4
 idna==2.10
 jmespath==0.10.0
 oauthlib==3.1.0
-Pillow==7.2.0
-psycopg2==2.8.5
-psycopg2-binary==2.8.5
+Pillow==9.0.1
+psycopg2==2.9.3
+psycopg2-binary==2.9.3
 pycodestyle==2.6.0
+pycparser==2.21
+PyJWT==2.3.0
 python-dateutil==2.8.1
 python3-openid==3.2.0
 pytz==2020.1
@@ -37,6 +41,7 @@ six==1.15.0
 sqlparse==0.3.1
 stripe==2.48.0
 toml==0.10.1
+tzdata==2022.1
 ua-parser==0.10.0
 urllib3==1.25.9
 user-agents==2.2.0
