--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,8 @@ botocore==1.17.38
 certifi==2020.6.20
 cffi==1.15.0
 chardet==3.0.4
+charset-normalizer==2.0.12
+cloudinary==1.29.0
 coverage==5.2.1
 cryptography==36.0.2
 defusedxml==0.6.0
@@ -13,7 +15,8 @@ Django==4.0.3
 django-allauth==0.49.0
 django-autoslug==1.9.8
 django-ckeditor==6.2.0
-django-countries==6.1.2
+django-cloudinary-storage==0.3.0
+django-countries==7.3.2
 django-crispy-forms==1.9.1
 django-environ==0.4.5
 django-js-asset==1.2.2
@@ -34,14 +37,15 @@ PyJWT==2.3.0
 python-dateutil==2.8.1
 python3-openid==3.2.0
 pytz==2020.1
-requests==2.24.0
+requests==2.27.1
 requests-oauthlib==1.3.0
-s3transfer==0.3.3
 six==1.15.0
 sqlparse==0.3.1
 stripe==2.48.0
 toml==0.10.1
+typing_extensions==4.1.1
 tzdata==2022.1
 ua-parser==0.10.0
-urllib3==1.25.9
+urllib3==1.26.9
 user-agents==2.2.0
+whitenoise==6.0.0
